--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
-
-
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-   
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "path": "^0.12.7"
   }
 }
